--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "tsc -w",
-    "dev": "nodemon --inspect ./dist/server.js",
+    "dev": "nodemon --inspect ./dist/index.js",
     "build": "tsc",
-    "start": "node dist/server.js"
+    "start": "node dist/index.js"
   },
   "author": "",
   "license": "ISC",
